# DDG

./: .gitignore  DDG.jl  Handles.jl  Manifest.toml  Project.toml  Readme.md  fast_obj.jl  geometry.jl  halfedge.jl  halfedges.jl  laplacematrix.jl  mean_curvature_flow.jl  meshviz_mod.jl  polygon_soup_utils.jl  refinement.jl  subset.jl  validations.jl
FastOBJ/: Project.toml
FastOBJ/src/: FastOBJ.jl
fast_obj/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fast_obj_jl.cpp
fast_obj/lib/: libfast_obj_jl.dylib
utils/: Handles.jl  cycpairvector.jl  matrix-set-dict.jl  multimaps.jl  setwo-dictwo.jl  vector-set-dict.jl
